<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:hint="Name"
        android:inputType="text"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtUsername"
        android:inputType="text"
        android:layout_below="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        android:layout_below="@+id/txtUsername"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

    <EditText
        android:id="@+id/txtRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/txtRetypePassword"
        android:inputType="textPassword"
        android:layout_below="@id/txtPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/txtRetypePassword"
        app:layout_constraintTop_toBottomOf="@+id/txtRetypePassword" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtPhone"
        android:inputType="phone"
        android:layout_below="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnSignMeUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSignMeUp"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        app:layout_constraintVertical_bias="1.0" />

</RelativeLayout>